Weak external symbols found in WebKit.framework with Release+Coverage configuration <https://webkit.org/b/226668> <rdar://problem/78890081>

Reviewed by Darin Adler.

* Configurations/WebKit.xcconfig:
(UNEXPORTED_SYMBOL_LDFLAGS):
- Remove std::function<> symbols as those were replaced
  by WTF::Function<> a while ago.

* Shared/Cocoa/DefaultWebBrowserChecks.mm:
(WebKit::determineITPStateInternal):
(WebKit::doesParentProcessHaveITPEnabled):
- Switch to use TCCSoftLink.h.

* Shared/Cocoa/TCCSoftLink.h: Add.
* Shared/Cocoa/TCCSoftLink.mm: Add.
- Implement a single place for soft-linking to
  TCC.framework.

* Shared/EntryPointUtilities/Cocoa/XPCService/XPCServiceEntryPoint.mm:
(WebKit::XPCServiceInitializerDelegate::getProcessIdentifier):
- Change ProcessIdentifier to WebCore::ProcessIdentifier
  to fix the build since this source file no longer gets
  `using namespace WebCore;` from another source file
  after changes to SourcesCocoa.txt.

* SourcesCocoa.txt:
- Add DefaultWebBrowserChecks.mm since it no longer
  contains any SOFT_LINK macros.
- Add new TCCSoftLink.mm file.

* UIProcess/Cocoa/MediaPermissionUtilities.mm:
(WebKit::checkUsageDescriptionStringForType):
* UIProcess/Cocoa/WebProcessProxyCocoa.mm:
(WebKit::WebProcessProxy::isAXAuthenticated):
* UIProcess/ios/WKActionSheetAssistant.mm:
(-[WKActionSheetAssistant defaultActionsForLinkSheet:]):
(-[WKActionSheetAssistant defaultActionsForImageSheet:]):
- Switch to use TCCSoftLink.h.

* WebKit.xcodeproj/project.pbxproj:
- Add TCCSoftLink.{h,mm} to the project.
- Remove DefaultWebBrowserChecks.mm from the
  WebKit.framework target after adding it to
  SourcesCocoa.txt.


Canonical link: https://commits.webkit.org/238533@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278535 268f45cc-cd09-0410-ab3c-d52691b4dbfc